--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "expo": "~38.0.1",
+    "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.0",
+    "modal": "^1.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1",
+    "expo-barcode-scanner": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
